0.02
 - Add File::Find::Rule::Dicom to SEE ALSO section in doc.
 - Add minimum Perl version.

0.01 2014-08-05T16:59:33+02:00
 - First version.