@@ -49,6 +49,13 @@ Dicom::File::Detect - Detect DICOM file through magic string.
  use Dicom::File::Detect qw(dicom_detect_file);
  my $dcm_flag = dicom_detect_file($file);
 
+=head1 DESCRIPTION
+
+This Perl module detect DICOM file through magic string.
+DICOM (Digital Imaging and Communications in Medicine) is a standard for
+handling, storing, printing, and transmitting information in medical imaging.
+See L<DICOM on Wikipedia|https://en.wikipedia.org/wiki/DICOM>.
+
 =head1 SUBROUTINES
 
 =over 8
