@@ -5,6 +5,12 @@ SYNOPSIS
      use Dicom::File::Detect qw(dicom_detect_file);
      my $dcm_flag = dicom_detect_file($file);
 
+DESCRIPTION
+    This Perl module detect DICOM file through magic string. DICOM (Digital
+    Imaging and Communications in Medicine) is a standard for handling,
+    storing, printing, and transmitting information in medical imaging. See
+    DICOM on Wikipedia <https://en.wikipedia.org/wiki/DICOM>.
+
 SUBROUTINES
     "dicom_detect_file($file)"
              Detect DICOM file.
@@ -84,7 +90,7 @@ DEPENDENCIES
     Error::Pure, Exporter, Readonly.
 
 SEE ALSO
-    DicomPack.
+    DicomPack, File::Find::Rule::Dicom.
 
 REPOSITORY
     <https://github.com/tupinek/Dicom-File-Detect>
