@@ -1,4 +1,5 @@
 0.02
+ - Add DESCRIPTION section to doc.
  - Add File::Find::Rule::Dicom to SEE ALSO section in doc.
  - Add minimum Perl version.
 
